--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,215 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="70" data-price="5.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WegPfY"><img src="https://m.media-amazon.com/images/I/71d11O56FQL._SR400,400_.jpg" alt="Sunglasses" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WegPfY">SOJOS Fashion Cateye Sunglasses for Women Flat Lens</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>70% off at $19.99</strong> with promo code: <strong>70SJ1070</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WegPfY">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="15.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W8IGOD"><img src="https://m.media-amazon.com/images/I/617I+cX6Z+L._SR400,400_.jpg" alt="AUSUN Fitness Tracker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W8IGOD">AUSUN Fitness Tracker, FT902 Upgraded Color Screen Activity Tracker with Heart Rate Monitor Connected GPS Step Counter Sleep Monitor Stopwatch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.59</span><span class="ori_price">$25.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $25.99</strong> with promo code: <strong>40AR17PZ</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W8IGOD">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="3.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YKQ6VT"><img src="https://m.media-amazon.com/images/I/718Xn2s1pBL._SR400,400_.jpg" alt="ipper Star Facial Kpop Masks" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YKQ6VT">MEZETIHE Unisex Korean Mouth Mask Anti-dust Cute Kawaii Black Cotton Bear Zipper Star Facial Kpop Masks</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>80% off at $19.99</strong> with promo code: <strong>80F6L1OQ</strong></span></p>
+      <span class="ex_date">Expiration Date :  May 24, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YKQ6VT">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="27.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VSWLAk"><img src="https://m.media-amazon.com/images/I/61A6eZhqb9L._SR400,400_.jpg" alt="Letsfit Wirelss Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VSWLAk">Letsfit Wirelss Earbuds, Bluetooth 5.0 in-Ear Headphones Deep Bass 3D Stereo Sound Earphones with 27 Hours Playtime, Sweatproof Bluetooth Earbuds</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.89</span><span class="ori_price">$39.98</span></address>
+      <p><span>Take <strong>30% off at $39.98</strong> with promo code: <strong>30Q5A2F8</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VSWLAk">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="25.06">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YHJ4kr"><img src="https://m.media-amazon.com/images/I/61g1lgbLyvL._SR400,400_.jpg" alt="Baby Nail Trimmer Electric" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YHJ4kr">Baby Nail Trimmer Electric,GROWRICH Safe Baby Nail File,Nail Clippers Wireless Rechargeable Manicure Set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.06</span><span class="ori_price">$29.49</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>15% off at $29.49</strong> with promo code: <strong>154QR7K5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 19, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YHJ4kr">Use Code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="30" data-price="34.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HvCCaN"><img src="https://m.media-amazon.com/images/I/61+QxHjC-PL._SR400,400_.jpg" alt="Bluetooth On Ear Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HvCCaN">Bluetooth On Ear Headphones, Passive Noise Reducing Headset, Wireless HiFi Stereo Headphones 16H Playtime Soft Memory Earmuffs </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$34.99</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $49.99</strong> with promo code: <strong>303WZKH3</strong></span></p>
+      <span class="ex_date">Expiration Date : May 24, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HvCCaN">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="50.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WeHKrL"><img src="https://m.media-amazon.com/images/I/51TttuFfy1L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WeHKrL">Autel AP200 OBD2 Scanner Bluetooth Adapter with All System Diagnoses and Service Functions Including Oil Reset...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$50.40</span><span class="ori_price">$63.00</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>20% off at $63.00</strong> with promo code: <strong>20NBAEPB</strong></span></p>
+      <span class="ex_date">Expiration Date : May 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WeHKrL">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="25.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HtEGQv"><img src="https://m.media-amazon.com/images/I/61bAAD-CpeL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HtEGQv">Wireless Earbuds, OCANIA Bluetooth 5.0 True Wireless in-Ear Earphones with Charging Case,Built-in Microphones Auto Pairing Waterproof 3D Stereo </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.59</span><span class="ori_price">$45.99</span></address>
+      <p><span>Take <strong>40% off at $45.99</strong> with promo code: <strong>40FZX4IF</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 19, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HtEGQv">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ElsHm4"><img src="https://m.media-amazon.com/images/I/71x3x6Ar3pL._SR400,400_.jpg" alt="Rechargeable Power Screwdriver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>48% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ElsHm4">WORKPRO Cordless Rechargeable Power Screwdriver Lithium-ion 3.6V with Quick Change Bits</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.99</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>48% off at $24.99</strong> with promo code: <strong>48Q6R4EU</strong></span></p>
+      <span class="ex_date">Expiration Date : May 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ElsHm4">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="8.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2VGKhXm"><img src="https://m.media-amazon.com/images/I/51WQjWHbQuL._SR400,400_.jpg" alt="Hanging Light" /></a>
