--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    
+
+    <!--google alalytics-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113637704-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
