--- a/app/views/deals/_body_coupon_deals.html.erb
+++ b/app/views/deals/_body_coupon_deals.html.erb
@@ -15,6 +15,51 @@
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YLP5wR"><img src="https://images-na.ssl-images-amazon.com/images/I/61jiXeUPtjL._SX679_.jpg" alt="Dyson Cyclone" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YLP5wR">Dyson Cyclone V10 Animal Lightweight Cordless Stick Vacuum Cleaner</a></p>
+    <span class="dis_price">$449.99</span><span class="org_price">$599.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YLP5wR">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2Qh2kT5"><img src="https://images-na.ssl-images-amazon.com/images/I/61rjV21bzfL._SX522_.jpg" alt="Acer Predator Helios 300 Gaming Laptop PC" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2Qh2kT5">Acer Predator Helios 300 Gaming Laptop PC, 15.6" FHD IPS w/ 144Hz Refresh, Intel i7-8750H, GTX 1060 6GB, 16GB DDR4, 256GB NVMe SSD, Aeroblade Metal Fans PH315-51-78NP</a></p>
+    <span class="dis_price">$899.00</span><span class="org_price">$1,299.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2Qh2kT5">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YHX1it"><img src="https://images-na.ssl-images-amazon.com/images/I/81oUcmzZwLL._SX522_.jpg" alt="Lenovo Flex 14 2-in-1 Convertible Laptop" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YHX1it">Lenovo Flex 14 2-in-1 Convertible Laptop, 14 Inch FHD (1920 X 1080) Touchscreen Display, AMD Ryzen 5 3500U Processor, Radeon Vega 8 Graphics, 8GB DDR4 RAM, 256GB NVMe SSD</a></p>
+    <span class="dis_price">$529.00</span><span class="org_price">$650.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YHX1it">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
      <a target="_blank" href="https://amzn.to/2VQld58"><img src="https://images-na.ssl-images-amazon.com/images/I/71yrbA2S9mL._SX679_.jpg" alt="samsung QLED TV" /> </a>
   </div>
   <div class="inner">
