--- a/app/views/deals_days/day_03.html.erb
+++ b/app/views/deals_days/day_03.html.erb
@@ -6,12 +6,12 @@
     <div class="codes common_layout">
       <div class="wrap">
         <div class="lt_cnt">
-          <h2>Promotion Codes</h2>
-          <%= render 'promocodes_days/lt_cnt' %>
+          <h2>Amazon Best Deals</h2>
+          <%= render 'deals_days/lt_cnt' %>
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Code on Amazon May. 22. 2019</h2>
+          <h2>Best Deals on Amazon May. 18. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -24,7 +24,7 @@
           </div>
           
           <div class="card_wrap sort-list">
-            <%= render 'promocodes_days/day_05' %>
+            <%= render 'deals_days/day_03' %>
           </div>
           
         </div><!--./rt_cnt-->    
