--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -16,6 +16,7 @@
   .codes .lt_cnt .toggle>ul>.last7days{display:none;}
   .codes .lt_cnt .last7days_pc>p{padding:8px 0;border-bottom:1px solid #3d3d3d;} 
   .codes .lt_cnt .last7days_pc>ul>li>a{text-decoration:none;color:#fff;display:block;font-size:15px;padding:5px 15px;background:#08f;margin:5px;border-radius:10px;}
+  .codes .lt_cnt .bestdeals>ul>li>a{background:#87c442;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis{}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_red{background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_green{background:#87c442;color:#fff;padding:0 10px;border-radius:10px}
@@ -53,6 +54,7 @@
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
+  .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
@@ -74,10 +76,12 @@
   .codes .lt_cnt .toggle>ul>li{padding:8px 0;border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_show_btn.png' %>) top 10px right 10px no-repeat;}
   .codes .lt_cnt .toggle>ul>li.on{border-bottom:1px solid #3d3d3d;background:url(<%=asset_path 'toggle_hide_btn.png' %>) top 12px right 10px no-repeat;}
   .codes .lt_cnt .toggle>ul>li>a{text-decoration:none;color:#000;display:block;}
-  .codes .lt_cnt .toggle>ul>li>ul{display:none;/*list-style:decimal;*/}
-  /*.codes .lt_cnt .toggle>ul>li>ul>li{list-style:decimal;}*/
+  .codes .lt_cnt .toggle>ul>li>ul{display:none;/*list-style:decimal;*/padding:10px 20px;}
+  .codes .lt_cnt .toggle>ul>li>ul>li{list-style:decimal;margin-bottom:7px;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#fff;display:block;padding:5px 15px;background:#08f;margin:5px;border-radius:10px;}
+  .codes .lt_cnt .toggle>ul>.bestdeals>ul>li>a{background:#87c442;}
   .codes .lt_cnt .last7days_pc{display:none;}
+  
 
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis{}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_red{background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
@@ -110,6 +114,7 @@
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
+  .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:1px 5px;color:white;text-align:center;position:absolute;z-index:1;}
@@ -135,7 +140,8 @@
   .codes .lt_cnt .toggle>ul>.last7days{display:block;}
   .codes .lt_cnt .last7days_pc{display:none;}
   .codes .card_wrap .card .inner>p>a{font-size:15px;font-weight:300;}
-  .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#000;display:block;}
+  .codes .lt_cnt .toggle>ul>li>ul>li>a,
+  .codes .lt_cnt .bestdeals>ul>li>a{text-decoration:none;color:#000;display:block;background:#fff;}
   .codes .lt_cnt .lt_sort_box.on{display:none;}
   .codes .rt_cnt .sort_box ul li{float:left;width:17.7%;margin:1%;}
 }
