--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -5,6 +5,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
           <li><a href="/deals/promo_codes">Promo Codes</a></li>
+          <!-- <li><a href="/deals/bestdeals">Best Deals</a></li> -->
           <li><a href="/deals/coupons">Sales & Coupons</a></li>
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
           <li><a href="/deals/quick_search">Quick Search</a></li>
@@ -15,6 +16,7 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <li><a href="/deals/promo_codes">PROMO CODES,</a></li>
+        <!-- <li><a href="/deals/bestdeals">BEST DEALS</a></li> -->
         <li><a href="/deals/coupons">SALES & COUPONS,</a></li>
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/quick_search">QUICK SEARCH,</a></li>
