--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -1,4 +1,4 @@
-<div class="card clearfix" data-score="percentage" data-price="discounted_price">
+<!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
@@ -14,4 +14,167 @@
   <div class="deal_btn">
     <a target="_blank" href="product_link">Shop Now</a>
   </div>
+</div> -->
+
+<div class="card clearfix" data-score="42" data-price="34.72">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EspKQG"><img src="https://images-na.ssl-images-amazon.com/images/I/81I4Oyz42gL._UX535_.jpg" alt="Nike Men's Downshifter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>42% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EspKQG">Nike Men's Downshifter 8 Running Shoe, Wolf Metallic Dark Cool Grey, 12.5 Regular US</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$34.72</span><span class="ori_price">$60.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EspKQG">Shop Now</a>
+  </div>
 </div>
+
+<div class="card clearfix" data-score="40" data-price="48.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EthIqK"><img src="https://images-na.ssl-images-amazon.com/images/I/81EvpF22irL._UX575_.jpg" alt="adidas Men's Speed Trainer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EthIqK">adidas Men's Speed Trainer 4 Baseball Shoe, Black/Crystal White/Carbon</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$48.00</span><span class="ori_price">$80.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EthIqK">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="58" data-price="33.46">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M5cx6u"><img src="https://images-na.ssl-images-amazon.com/images/I/810EthxNM6L._UX535_.jpg" alt="adidas Men's Speed Trainer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M5cx6u">adidas Men's Speed Trainer 4 Baseball Shoe, Power red/Crystal White/Scarlet, 4.5 M US</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$33.46</span><span class="ori_price">$80.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M5cx6u">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="99.15">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YI0bCT"><img src="https://images-na.ssl-images-amazon.com/images/I/81ffs42xKQL._UX575_.jpg" alt="New Balance Men's M990v4" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YI0bCT">New Balance Men's M990v4</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.15</span><span class="ori_price">$174.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YI0bCT">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="31.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wt3OPO"><img src="https://images-na.ssl-images-amazon.com/images/I/81j89vrpX6L._UX535_.jpg" alt="New Balance Men's 560v7 Cushioning Running Shoe" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wt3OPO">New Balance Men's 560v7 Cushioning Running Shoe, Silver/Black, 7 4E US</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$31.29</span><span class="ori_price">$69.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wt3OPO">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="19.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YLXMah"><img src="https://m.media-amazon.com/images/I/614bknkliwL._AC_UL320_.jpg" alt="First Alert CO605 Plug Battery Backup CO Alarm" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YLXMah">First Alert CO605 Plug Battery Backup CO Alarm, 1 pack, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.59</span><span class="ori_price">$41.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YLXMah">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="21.84">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VGqUOd"><img src="https://m.media-amazon.com/images/I/61nkirfcMwL._AC_UL320_.jpg" alt="Brita Tap Water Filter System" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VGqUOd">Brita Tap Water Filter System, Water Faucet Filtration System with Filter Change Reminder, Reduces Lead, BPA Free, Fits Standard Faucets Only - Complete, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.84</span><span class="ori_price">$44.56</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VGqUOd">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="14.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YKSzQ8"><img src="https://images-na.ssl-images-amazon.com/images/I/61bNBpKCbFL._SX522_.jpg" alt="Magnesium Glycinate Lysinate" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YKSzQ8">Doctor's Best High Absorption Magnesium Glycinate Lysinate, 100% Chelated, Non-GMO, Vegan, Gluten Free, Soy Free...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.09</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YKSzQ8">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="49.23">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YDnQo2"><img src="https://m.media-amazon.com/images/I/71MEjurY+wL._AC_UL320_.jpg" alt="Kettle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YDnQo2">Bonavita BV382510V 1.0L Digital Variable Temperature Gooseneck Kettle</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.23</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YDnQo2">Shop Now</a>
+  </div>
+</div>
+
