--- a/app/views/deals_days/_lt_cnt.html.erb
+++ b/app/views/deals_days/_lt_cnt.html.erb
@@ -31,6 +31,9 @@
     <%= render 'shared/bestdeals_days' %>
   </ul>
 </div>
+<div class="today_code">
+ <a href="/deals/bestdeals">Today's PromoCodes</a>
+</div>
 
 <div class="lt_sort_box clearfix">
   <ul class="clearfix">
